# netbox-scanner-plugin

./: LICENSE  README.md  pyproject.toml  setup.py
netbox_scanner_plugin/: __init__.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
netbox_scanner_plugin/api/: serializers.py  urls.py  views.py
netbox_scanner_plugin/migrations/: 0001_initial.py  0002_scanner_custom_field_data_scanner_tags_and_more.py
netbox_scanner_plugin/scanners/: __init__.py  base.py  cisco_switch.py  network_range.py
netbox_scanner_plugin/templates/netbox_scanner_plugin/: scanner.html  scanner_edit.html  scanner_list.html  scanresult_edit.html  scanresult_list.html
